note about how webpack-dev-server serves main.js

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>Hello, world!</h1>
     </header>
 
-    <!-- When using webpack-dev-server, the webpack output is served from the root directory, which means that we can use 'main.js' in our script path. If we were to use 'dist/main.js', then we'd be referring to the version of 'main.js' in the 'dist' folder. -->
+    <!-- When using webpack-dev-server, the webpack output is served from the root directory, which means that we can use 'main.js' in our script path. If we were to use 'dist/main.js', then we'd be referring to the version of 'main.js' in the 'dist' folder and that would only work, if we had used our 'npm run build' command before running 'npm run start:dev'-->
     <script src="main.js"></script>
 </body>
 </html>
